package unitins.tp1.dto;

public record ItemPedidoDTO (
    Integer quantidade,
    Double preco,
    Long idArma
){
    
}
